# Segovia

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  MEMORY.md  PROMPT.md  README.md  ROADMAP.md  SECURITY.md  np_filing.htm  prompt.md  pyproject.toml  release.toml
.claude/: settings.json
.claude/hooks/: gigabyte_reminder.py  publishing_reminder.py
.claude/skills/: README.md
.claude/skills/release/: SKILL.md  release-notes-template.md
.claude/skills/release/scripts/: version_sync_check.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: articulo-linkedin-segovia.txt  logo_render.py
bench/: bench.py  live_monitor.py  make_synthetic_ap.py  materialize_synthetic.py  replay_latency.py  replay_latency_si.py  run_full_online.ps1  run_online_sweep.sh  run_si_leg.ps1  segovia_chain.py  spikeinterface_chain.py
docs/architecture/: ARD.md  candidate-architectures.md  roadmap.md  rust-neuro-research.md  tech-stack.md
docs/architecture/adr/: 0001-language-rust.md  0002-cpu-not-gpu.md  0003-reuse-storage-primitives.md  0004-python-bridge-pyo3.md  0005-format-priority.md  0006-concurrency-model.md  0007-packaging-strategy.md  0008-domain-neutral-core-verticals.md  0009-versioning-and-release.md  0010-chunk-reader-io-contract.md  0011-zarr-reader-and-chunk-source-trait.md  0012-mtscomp-cbin-read-path.md  0013-preprocessing-chain-and-sc1.md  0014-success-criterion-publishable-systems-paper.md  0015-streaming-data-simulator.md  0016-ifc-simulator-leg.md  0017-batch-sizing-default.md  0018-batch-auto-oom-safety-cap.md
docs/brand/: visual-identity.md
docs/future/: leukemia-direction.md
docs/papers/GigaByte/: SUBMISSION-GUIDE.md  editorial-email.md  make_figure.py  paper.md
docs/papers/GigaByte/template/: paper.bib  paper.tex  tech-template.tex
docs/papers/JOSS/: JOSS-TEMPLATE.md  paper.md
docs/papers/JSS/: SUBMISSION-GUIDE.md  paper.md
docs/papers/NBDT/: SUBMISSION-GUIDE.md  paper.bib  paper.tex
docs/papers/PCI-Neuroscience/: SUBMISSION-GUIDE.md  paper.md
docs/papers/ReScienceC/: SUBMISSION-GUIDE.md  paper.md
docs/research/: 2026-06-10-rust-ephys-demand-validation.md  2026-06-10-rust-ephys-structural-niches.md  2026-06-22-bpcells-of-ephys-niche-verdict.md  2026-06-22-gpu-bottleneck-gating-verdict.md  2026-06-23-replay-latency-sweep.md  2026-06-23-repurpose-feasibility-verdict.md  2026-06-30-online-latency-si-comparison.md  2026-07-01-full-scale-si-comparison.md  2026-07-02-full-length-online-latency.md
scripts/: bench_bounded_memory.py  download_ibl_lf.py  robust_download_ap.py
src/: core.rs  dsp.rs  ephys.rs  lib.rs  sim.rs
src/dsp/: cmr.rs  filter.rs  pipeline.rs  whiten.rs
src/ephys/: cbin.rs  meta.rs  reader.rs  zarr.rs
src/sim/: ephys.rs  ifc.rs
tests/: test_cbin.py  test_ifc_simulator.py  test_preprocess.py  test_simulator.py  test_spike.py  test_spikeglx.py  test_zarr.py
tests/fixtures/: generate_fixtures.py  mini_int16.cbin  mini_int16.ch
tests/fixtures/mini_int16.zarr/traces/: zarr.json
tests/fixtures/mini_int16.zarr/traces/c/0/: 0
tests/fixtures/mini_int16.zarr/traces/c/1/: 0
tests/fixtures/mini_int16.zarr/traces/c/2/: 0
tests/fixtures/mini_int16.zarr/traces/c/3/: 0
tests/fixtures/reject_float32.zarr/traces/: zarr.json
