[package]
name = "segovia"
version = "0.0.0"
edition = "2021"
rust-version = "1.74"
description = "A fast, chunked, memory-bounded Rust engine for electrophysiology (Neuropixels) signal processing, with Python bindings."
authors = ["Felipe Carvajal Brown <fcarvajalbrown@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fcarvajalbrown/segovia"
homepage = "https://github.com/fcarvajalbrown/segovia"
documentation = "https://docs.rs/segovia"
keywords = ["neuroscience", "electrophysiology", "neuropixels", "dsp", "signal-processing"]
categories = ["science", "concurrency"]

[lib]
name = "segovia"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.28"
