[package]
name = "segovia"
version = "0.4.0"
edition = "2021"
rust-version = "1.74"
description = "A fast, chunked, memory-bounded Rust engine for electrophysiology (Neuropixels) signal processing, with Python bindings."
authors = ["Felipe Carvajal Brown <fcarvajalbrown@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/fcarvajalbrown/Segovia"
homepage = "https://github.com/fcarvajalbrown/Segovia"
documentation = "https://docs.rs/segovia"
keywords = ["neuroscience", "electrophysiology", "neuropixels", "dsp", "signal-processing"]
categories = ["science", "concurrency"]

[lib]
name = "segovia"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["abi3-py38"] }
numpy = "0.28"
memmap2 = "0.9"
bytemuck = "1"
thiserror = "2"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zarrs = { version = "0.23", default-features = false, features = ["filesystem", "gzip", "zstd", "blosc"] }
rayon = "1"
nalgebra = "0.33"
gemm = "0.18"

[dev-dependencies]
tempfile = "3"
