[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "segovia"
version = "0.0.0"
description = "A fast, chunked, memory-bounded Rust engine for electrophysiology (Neuropixels) signal processing, with Python bindings."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [{ name = "Felipe Carvajal Brown", email = "fcarvajalbrown@gmail.com" }]
keywords = [
    "neuroscience",
    "electrophysiology",
    "neuropixels",
    "spike-sorting",
    "spikeinterface",
    "signal-processing",
    "time-series",
    "zarr",
    "nwb",
    "dsp",
    "rust",
    "pyo3",
    "out-of-core",
    "scientific-computing",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/fcarvajalbrown/Segovia"
Repository = "https://github.com/fcarvajalbrown/Segovia"
Documentation = "https://github.com/fcarvajalbrown/Segovia"
Changelog = "https://github.com/fcarvajalbrown/Segovia/blob/main/CHANGELOG.md"
Issues = "https://github.com/fcarvajalbrown/Segovia/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
